--- a/source/sass/about.scss
+++ b/source/sass/about.scss
@@ -9,12 +9,22 @@
   border-radius: 0 0 30px 30px;
   margin-top: -1px;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/about-mobile@2x.png");
+    background-size: 292px auto;
+  }
+
   @media (min-width: $tablet-width) {
     background-image: url("../img/about-bg-tablet.png");
     background-repeat: no-repeat;
     background-position: top 96px right 8px;
     padding: 100px 74px 89px 74px;
     border-radius: 0 0 60px 60px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/about-bg-tablet@2x.png");
+      background-size: 720px auto;
+    }
   }
 
   @media (min-width: $desktop-width) {
@@ -27,6 +37,13 @@
       top 70px left 60px;
     padding: 133px 48% 163px 130px;
     border-radius: 0 0 56px 56px;
+
+    @media (min-resolution: 2dppx) {
+      background-image:
+        url("../img/about-bg-desktop@2x.png"),
+        url("../img/about-bg-rect-desktop@2x.png");
+      background-size: 630px auto, 212px auto;
+    }
   }
 }
 
