--- a/source/sass/intro.scss
+++ b/source/sass/intro.scss
@@ -9,6 +9,13 @@
     right 48px top 147px,
     left top -76px;
 
+  @media (min-resolution: 2dppx) {
+    background-image:
+      url("../img/traveller-illustration-mobile@2x.png"),
+      url("../img/globe-back-mobile@2x.png");
+    background-size: 192px auto, 320px auto;
+  }
+
   @media (min-width: $tablet-width) {
     background-color: $special-midnight;
     background-image:
@@ -18,6 +25,13 @@
     background-position:
       bottom 281px right 111px,
       bottom 142px left;
+
+    @media (min-resolution: 2dppx) {
+      background-image:
+        url("../img/traveller-illustration-tablet@2x.png"),
+        url("../img/globe-back-tablet@2x.png");
+      background-size: 372px auto, 768px auto;
+    }
   }
 
   @media (min-width: $desktop-width) {
@@ -33,5 +47,12 @@
     background-position:
       bottom 1px right 405px,
       bottom 1px left;
+
+    @media (min-resolution: 2dppx) {
+      background-image:
+        url("../img/traveller-illustration-desktop@2x.png"),
+        url("../img/globe-back-desktop@2x.png");
+      background-size: 431px auto, 1440px auto;
+    }
   }
 }
