--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -49,7 +49,7 @@
 }
 
 .page-header__toggle-menu-button--menu-open {
-  background-image: url("../img/icon_menu_mobile_close.svg");
+  background-image: url("../img/menu-close.svg");
 }
 
 .page-header--menu-open {
