Исправил индикатор онлайна

--- a/source/sass/user-card.scss
+++ b/source/sass/user-card.scss
@@ -377,6 +377,11 @@
   }
 }
 
+.user-card__user-status--index {
+  left: 53px;
+  top: 30px;
+}
+
 .user-card__user-status--offline {
   background-color: $special-red;
 }
