Добавил скругление углов для круглого аватара пользователя

--- a/source/sass/user-card.scss
+++ b/source/sass/user-card.scss
@@ -298,6 +298,7 @@
 
 .user-card__image {
   vertical-align: top;
+  border-radius: 50%;
 
   @media (min-width: $tablet-width) {
     grid-area: profile-photo;
