--- a/source/sass/profile.scss
+++ b/source/sass/profile.scss
@@ -138,9 +138,12 @@
 }
 
 .profile__image {
+  border-radius: 50%;
+
   @media (min-width: $tablet-width) {
     order: 4;
     margin: 0 75px 31px 0;
+    border-radius: 7px 7px 0 0;
   }
 
   @media (min-width: $desktop-width) {
