Отцентрировал карточки пользователя

--- a/source/sass/companions.scss
+++ b/source/sass/companions.scss
@@ -84,6 +84,9 @@
 }
 
 .companions__list {
+  @include flex;
+  @include flex-center;
+
   margin-bottom: 20px;
 
   @media (min-width: $tablet-width) {
