Удалил лишнее изображение

--- a/source/sass/intro.scss
+++ b/source/sass/intro.scss
@@ -20,7 +20,7 @@
     background-color: $special-midnight;
     background-image:
       url("../img/traveller-illustration-tablet.png"),
-      url("../img/globe-back-tablet.svg");
+      url("../img/globe-back-tablet.png");
     background-repeat: no-repeat, no-repeat;
     background-position:
       bottom 281px right 111px,
