--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -2,7 +2,7 @@
   font-family: "Bloggersans";
   font-weight: normal;
   font-style: normal;
-  display: swap;
+  font-display: swap;
   src: local("Bloggersans"),
     local("Bloggersans"),
     url("../fonts/bloggersans.woff") format("woff");
@@ -12,7 +12,7 @@
   font-family: "Bloggersans";
   font-weight: 800;
   font-style: normal;
-  display: swap;
+  font-display: swap;
   src: local("Bloggersans Bold"),
     local("Bloggersans-Bold"),
     url("../fonts/bloggersans-bold.woff") format("woff");
@@ -22,7 +22,7 @@
   font-family: "Bloggersans";
   font-weight: 800;
   font-style: italic;
-  display: swap;
+  font-display: swap;
   src: local("Bloggersans Bold Italic"),
     local("Bloggersans-Bold-Italic"),
     url("../fonts/bloggersans-bolditalic.woff") format("woff");
@@ -32,7 +32,7 @@
   font-family: "Bloggersans";
   font-weight: normal;
   font-style: italic;
-  display: swap;
+  font-display: swap;
   src: local("Bloggersans Italic"),
     local("Bloggersans-Italic"),
     url("../fonts/bloggersans-italic.woff") format("woff");
@@ -42,7 +42,7 @@
   font-family: "Bloggersans";
   font-weight: 300;
   font-style: normal;
-  display: swap;
+  font-display: swap;
   src: local("Bloggersans Light"),
     local("Bloggersans-Light"),
     url("../fonts/bloggersans-light.woff") format("woff");
@@ -52,7 +52,7 @@
   font-family: "Bloggersans";
   font-weight: 300;
   font-style: italic;
-  display: swap;
+  font-display: swap;
   src: local("Bloggersans Light Italic"),
     local("Bloggersans-Light-Italic"),
     url("../fonts/bloggersans-lightitalic.woff") format("woff");
@@ -62,7 +62,7 @@
   font-family: "Bloggersans";
   font-weight: 500;
   font-style: normal;
-  display: swap;
+  font-display: swap;
   src: local("Bloggersans Medium"),
     local("Bloggersans-Medium"),
     url("../fonts/bloggersans-medium.woff") format("woff");
@@ -72,7 +72,7 @@
   font-family: "Bloggersans";
   font-weight: 500;
   font-style: italic;
-  display: swap;
+  font-display: swap;
   src: local("Bloggersans Medium Italic"),
     local("Bloggersans-Medium-Italic"),
     url("../fonts/bloggersans-lightitalic.woff") format("woff");
