--- a/source/sass/page-header.scss
+++ b/source/sass/page-header.scss
@@ -60,4 +60,9 @@
   left: 0;
   right: 0;
   z-index: 10;
+
+  @media (min-width: $desktop-width) {
+    background-color: $basic-blue;
+    position: initial;
+  }
 }
