--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -37,6 +37,8 @@
 }
 
 .main-nav__item {
+  overflow: hidden;
+
   @media (min-width: $desktop-width) {
     margin-right: 34px;
   }
@@ -50,4 +52,24 @@
   &:active {
     opacity: 0.3;
   }
+}
+
+.main-nav__link-text {
+  padding: 0 5px;
+  position: relative;
+  display: inline-block;
+  transition: transform 0.3s;
+}
+
+.main-nav__link-text::before {
+  position: absolute;
+  top: 100%;
+  content: attr(data-hover);
+  font-weight: 700;
+  transform: translate3d(0, 0, 0);
+}
+
+.main-nav__link:hover .main-nav__link-text,
+.main-nav__link:focus .main-nav__link-text {
+  transform: translateY(-100%);
 }
