--- a/source/sass/menu.scss
+++ b/source/sass/menu.scss
@@ -31,7 +31,7 @@
   display: none;
   flex-basis: 100%;
   padding-top: 76px;
-
+  overflow: hidden;
   &::before {
     @media (min-width: $desktop-width) {
       position: absolute;
