Добавил состояние ошибки для textarea

--- a/source/sass/planner.scss
+++ b/source/sass/planner.scss
@@ -712,6 +712,11 @@
   }
 }
 
+.planner__textarea--error {
+  border-color: $special-pink;
+  position: relative;
+}
+
 .planner__textarea-label {
   @include flex;
 
