--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -20,6 +20,7 @@ $special-orange-light: #ffbd30;
 $special-orange-hover: #f26926;
 $special-grey: #444444;
 $special-pink: #f47e7e;
+$special-light-pink: #ffefef;
 $special-midnight:#192144;
 $special-midnight-opacity: rgba($special-midnight, 0.3);
 $special-green: #81e31e;
