--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -7,7 +7,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 20px 0 0 15px;
+    // padding: 20px 0 0 15px;
+    padding: 19px 0 0 11px;
     margin-bottom: 0;
   }
 }
@@ -40,7 +41,8 @@
   overflow: hidden;
 
   @media (min-width: $desktop-width) {
-    margin-right: 34px;
+    // margin-right: 34px;
+    margin-right: 24px;
   }
 }
 
