--- a/source/sass/filtered.scss
+++ b/source/sass/filtered.scss
@@ -25,7 +25,7 @@
     margin-bottom: 20px;
 
     @media (min-width: $tablet-width) {
-      margin-bottom: 44px;
+      margin-bottom: 48px;
     }
 
     @media (min-width: $desktop-width) {
@@ -127,12 +127,22 @@
     border-radius: 20px;
     background-color: $white;
   }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 15%;
+  }
 }
 
 .filtered__button-list {
   @include flex;
+
+  justify-content: space-evenly;
   border-radius: 20px;
   overflow: hidden;
+
+  @media (min-width: $tablet-width ) {
+    padding-right: 4px;
+  }
 
   @media (min-width: $desktop-width) {
     justify-content: flex-end;
@@ -144,7 +154,8 @@
   @include flex;
   @include flex-center;
 
-  flex-basis: calc(50% - 0.5px);
+  // flex-basis: calc(50% - 0.5px);
+  flex: 1;
   cursor: pointer;
   background-color: $white;
   margin-right: 1px;
@@ -165,6 +176,7 @@
 .filtered__button--previous {
   @media (min-width: $tablet-width) {
     justify-content: flex-end;
+    margin-right: 5px;
   }
 }
 
@@ -194,8 +206,14 @@
 }
 
 .filtered__link--arrow {
+  width: 100%;
+
   &:active {
     opacity: 0.3;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: auto;
   }
 }
 
