Исправил верстку блока тегов и добавил смену состояний

--- a/source/sass/planner.scss
+++ b/source/sass/planner.scss
@@ -7,6 +7,7 @@
   background-color: $special-blue-lighter;
 
   @media (min-width: $tablet-width) {
+    margin-top: -55px;
     padding: 53px 75px 63px 75px;
   }
 
