--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -28,6 +28,7 @@ $special-hover-red: #f9d8d8;
 $special-blue: #132576;
 $special-grey-light: #f3f4f8;
 $special-grey-borders: #cbced9;
+$special-grey-borders-hover: #aeb4cb;
 $special-icon-grey: #afb0b5;
 $special-orange-borders: #ff5c23;
 $special-yellow-grey-borders: #f3c72b;
