Добивил cursor: pointer для ползунка фильтра уровня

--- a/source/sass/level-filter.scss
+++ b/source/sass/level-filter.scss
@@ -104,6 +104,7 @@
   width: 10px;
   height: 10px;
   border-radius: 50%;
+  cursor: pointer;
   background-color: $basic-blue-dark;
 
   &:hover {
