--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -66,6 +66,10 @@
   box-shadow: 0 2px 8px $popup-shadow;
 }
 
+@mixin alphabet-popup-shadow {
+  box-shadow: 0 8px 16px $popup-shadow;
+}
+
 @mixin outline {
   outline: 3px solid rgb(107, 206, 107);
   outline-offset: -3px;
