--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -449,6 +449,15 @@
   text-align: center;
   text-transform: uppercase;
 
+  &:hover {
+    background-color: $white;
+    @include button-drop-shadow;
+  }
+
+  &:active {
+    background-color: $special-yellow-grey-borders;
+  }
+
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 20px;
