--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -70,6 +70,9 @@
   box-shadow: 0 8px 16px $popup-shadow;
 }
 
+@mixin button-drop-shadow {
+  box-shadow: 0px 3px 6px $button-shadow;
+}
 @mixin outline {
   outline: 3px solid rgb(107, 206, 107);
   outline-offset: -3px;
