--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -43,6 +43,7 @@ $special-grey-opacity-borders: rgba($special-grey-borders, 0.3);
 $popup-shadow: rgba(29, 46, 91, 0.14);
 $input-shadow: rgba(22, 28, 53, 0.17);
 $range-shadow: rgba(0, 0, 0, 0.24);
+$button-shadow: rgba(0, 0, 0, 0.14);
 $mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1440px;
