--- a/source/sass/transport-list.scss
+++ b/source/sass/transport-list.scss
@@ -94,3 +94,11 @@
 .transport-list__checkbox:checked + .transport-list__label {
   color: $basic-blue;
 }
+
+.transport-list__label:hover > .transport-list__icon {
+  opacity: 0.7;
+}
+
+.transport-list__label:active > .transport-list__icon {
+  opacity: 0.3;
+}
