--- a/source/sass/planner.scss
+++ b/source/sass/planner.scss
@@ -669,6 +669,20 @@
   }
 }
 
+.planner__textarea-container {
+  position: relative;
+
+  @media (min-width: $tablet-width) {
+    max-height: 141px;
+  }
+}
+
+.planner__textarea-container--czech {
+  @media (min-width: $tablet-width) {
+    max-height: initial;
+  }
+}
+
 .planner__textarea {
   @include text-area-reset;
 
@@ -717,6 +731,35 @@
 .planner__textarea--error {
   border-color: $special-pink;
   position: relative;
+}
+
+.planner__error-massage {
+  display: none;
+}
+
+.planner__textarea--error + .planner__error-massage {
+  @include flex;
+
+  position: absolute;
+  bottom: 20px;
+  left: 1px;
+  width: calc(94% - 10px);
+  align-items: center;
+  padding-left: 21px;
+  border-radius: 0 0 4px 4px;
+  height: 56px;
+  color: $red;
+  background-color: $special-light-pink;
+
+  @media (min-width: $tablet-width) {
+    bottom: 1px;
+    left: 1px;
+    width: calc(94% - 23px);
+  }
+
+  @media (min-width: $desktop-width) {
+    width: calc(73% - 23px);
+  }
 }
 
 .planner__textarea-label {
@@ -788,6 +831,12 @@
     @media (min-width: $desktop-width) {
       right: 211px;
     }
+  }
+}
+
+.planner__textarea-label--czech {
+  @media (min-width: $tablet-width) {
+    padding-top: 41px;
   }
 }
 
