Исправил центровку модального окна бизнес тарифов

--- a/source/sass/business-rates.scss
+++ b/source/sass/business-rates.scss
@@ -1,6 +1,7 @@
 .business-rates {
   display: none;
   position: fixed;
+  transform: translateY(-50%);
   top: 50vh;
   left: 25px;
   right: 25px;
