--- a/source/sass/tag-list.scss
+++ b/source/sass/tag-list.scss
@@ -26,7 +26,7 @@
   @media (min-width: $tablet-width) {
     width: 64%;
     grid-area: tag-list;
-    padding: 0 0 0 35px;
+    padding: 10px 0 0 35px;
     margin-top: -10px;
   }
 
@@ -43,7 +43,7 @@
   padding-top: 16px;
 
   @media (min-width: $tablet-width) {
-    padding-top: 2px;
+    padding-top: 10px;
   }
 
   @media (min-width: $desktop-width) {
