--- a/source/sass/user-price.scss
+++ b/source/sass/user-price.scss
@@ -35,6 +35,7 @@
 
   @media (min-width: $tablet-width) {
     padding: 0;
+    flex-wrap: nowrap;
   }
 }
 
@@ -148,6 +149,7 @@
 
   @media (min-width: $tablet-width) {
     order: -1;
+    min-width: 68px;
     width: 68px;
     height: 68px;
     margin-right: 22px;
