--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -510,6 +510,11 @@
 }
 
 .button__arrow-icon {
+
+  @media (min-width: $tablet-width) {
+    flex-shrink: 0;
+  }
+
   @media (min-width: $desktop-width) {
     width: 16px;
     height: 16px;
