--- a/source/sass/directions.scss
+++ b/source/sass/directions.scss
@@ -302,6 +302,8 @@
   line-height: 14px;
 
   @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: nowrap;
     font-size: 24px;
     line-height: 24px;
     padding: 31px 30px 27px 32px;
